实现了串口收发的功能 & 用互斥量解决多任务使用串口资源冲突

--- a/software/Printer.uvprojx
+++ b/software/Printer.uvprojx
@@ -189,7 +189,7 @@
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
-            <useUlib>0</useUlib>
+            <useUlib>1</useUlib>
             <EndSel>0</EndSel>
             <uLtcg>0</uLtcg>
             <nSecure>0</nSecure>
@@ -718,6 +718,16 @@
               <FileType>5</FileType>
               <FilePath>.\System\Delay.h</FilePath>
             </File>
+            <File>
+              <FileName>SemaphoreMang.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\System\SemaphoreMang.c</FilePath>
+            </File>
+            <File>
+              <FileName>SemaphoreMang.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\System\SemaphoreMang.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -762,6 +772,16 @@
               <FileName>PrinterHead.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\Hardware\PrinterHead.h</FilePath>
+            </File>
+            <File>
+              <FileName>Serial.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Hardware\Serial.c</FilePath>
+            </File>
+            <File>
+              <FileName>Serial.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Hardware\Serial.h</FilePath>
             </File>
           </Files>
         </Group>
